--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,22 @@
 {
-    "python.pythonPath": "env/bin/python3"
+    "python.pythonPath": "env/bin/python3",
+    "python.linting.pycodestyleArgs": [
+        "--ignore=E501"
+    ],
+    "editor.formatOnSave": true,
+    "editor.rulers": [
+        80,
+        120
+    ],
+    "files.exclude": {
+        "**/.git": true,
+        "**/.svn": true,
+        "**/.hg": true,
+        "**/CVS": true,
+        "**/.DS_Store": true,
+        "**/*.pyc": true,
+        "**/__pycache__/": true,
+        "**/.pytest_cache/": true
+    },
+    "workbench.editor.enablePreview": false
 }
