--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ install:
   - pip install pep8
   - pip install coveralls
   - pip install https://github.com/dcramer/pyflakes/tarball/master
-  - pip install -r requirements.txt --use-mirrors
+  - pip install -r requirements_dev.txt --use-mirrors
 #before_script:
 #  - "pep8 --exclude=migrations --ignore=E501,E225,E261,W191,E101,E124 ."
 #  - pyflakes -x W .
