--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -30,7 +30,9 @@
         "**/.DS_Store": true,
         "**/*.pyc": true,
         "**/__pycache__/": true,
-        "**/.pytest_cache/": true
+        "**/.pytest_cache/": true,
+        "**/.mypy_cache": true,
+        "**/.ropeproject": true
     },
     "workbench.editor.enablePreview": false
 }
